# local-llama

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
local_llama/: __init__.py  app.py  assistant.py  entities.py  history.py  ollama_llm.py  settings.py  util.py
local_llama/ollama_api/: ollama_llm.py  options.py
local_llama/ui/: page.py  sidebar.py
